# grid-sim

./: .gitignore  .zenodo.json  CITATION.cff  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
data/: PROVENANCE.md
data/packs/: 2024.sha256  b4.sha256  b6.sha256  cb7.sha256  cbs-2024.sha256  cf-1985-2024.sha256  cf-eu-1985-2024.sha256  cf-gb2-1985-2024.sha256  cf-gb3-1985-2024.sha256  costs-evidence.sha256  demand-tiled.sha256  entsoe-2024.sha256  era5-1985-2023.sha256  era5-2024.sha256  era5-eu-1985-2024.sha256  etys.sha256  fes2025.sha256  response-holdings.sha256  weather-gb-t2m-pop.sha256
data/reference/: costs-gb.toml  fes-pathway-current-holdings-2019-speed.toml  fes-pathway-current-holdings-df090.toml  fes-pathway-current-holdings.toml  fes-pathway.toml  heating-cop.toml  inertia-constants.toml  neso-frequency-2019-08-09-event-window.csv  pathways-published.toml  prices-2024.toml  prices-eu-2024.toml  response-holdings-2025.toml  stability-2019-event.toml
docs/: 00-doc-map.md  01-vision.md  02-architecture.md  03-domain-model.md  04-implementation-plan.md  05-validation.md  06-conventions.md  07-research-syllabus.md  08-risks-and-decisions.md
docs/manual/: manual.typ
docs/notes/: 2024-price-pack-report.md  2024-validation-pack-report.md  b4-lp-findings.md  b4-lp-step3-review.md  b6-etys-artefact.md  b6-two-zone-data-report.md  b6-two-zone-data-review.md  b6-two-zone-engine-review.md  b6-two-zone-run-report.md  comment-consistency-sweep.md  d1-renewables-ninja-licence.md  d10-ev-overlay-review.md  d10-ev-overlay.md  d11-a2a-mismatch-characterisation.md  d11-engine-review.md  d11-per-zone-price-data-report.md  d11-per-zone-price-data-review.md  d11-priced-dispatch-review.md  d11-priced-dispatch.md  d11-sweep-review.md  d11-sweep-run-report.md  d12-lp-tractability.md  d12-mincurtailment-decision.md  d12-perfect-foresight-lp-review.md  d12-perfect-foresight-lp.md  d13-composed-boundary-trade-review.md  d13-composed-boundary-trade.md  d13-run-report.md  d3-embedded-convention.md  d4-policy-contract.md  d4-rule-based-dispatch.md  d5-zone-granularity.md  d8-lcoe-methods-review.md  d8-lcoe-methods.md  d9-heating-overlay-review.md  d9-heating-overlay.md  entsoe-pack-review.md  entsoe-stage5-pack-report.md  era5-cf-2024-report.md  eu-cf-derivation-report.md  (+45 more)
grid-adequacy/: Cargo.toml
grid-adequacy/benches/: stage4.rs
grid-adequacy/src/: attribution.rs  availability.rs  costs.rs  dispatch.rs  flow.rs  heating_mix.rs  import_convention.rs  inputs.rs  lib.rs  lp.rs  multizone.rs  policy.rs  pricing.rs  result.rs  solve.rs  sweep.rs
grid-adequacy/tests/: acceptance_2024.rs  acceptance_b4_3zone.rs  acceptance_b4_lp.rs  acceptance_b4_robustness.rs  acceptance_b6_2zone.rs  acceptance_b6_robustness.rs  acceptance_d11_priced_ladder.rs  acceptance_d11_sweep.rs  acceptance_d13_60gw.rs  acceptance_d13_composed.rs  acceptance_stage2_2024.rs  acceptance_stage3_2024.rs  acceptance_stage3_rs37y.rs  acceptance_stage4.rs  acceptance_stage5_2024.rs  acceptance_stage7_pathways.rs  cost_stack.rs  engine.rs  geothermal_depth.rs  heating.rs  heating_mix.rs  import_convention.rs  inputs.rs  lp_dispatch.rs  lp_gap_report.rs  lp_guards.rs  lp_loss_waste.rs  lp_rolling.rs  lp_solve.rs  multi_year.rs  multizone.rs  multizone_deficit_charge_guard.rs  pricing_delivered.rs  q9_decomposition.rs  reliability.rs  solver.rs  storage.rs  tractability_bench.rs
grid-cli/: Cargo.toml  build.rs
grid-cli/src/: main.rs  plot.rs  run.rs  solve.rs  stability.rs  sweep.rs
grid-cli/src/fetchdata/: build.rs  checks.rs  error.rs  gbtime.rs  mod.rs  net.rs  table.rs
grid-cli/tests/: acceptance_fetchdata_2024.rs  cli.rs  heating_mix_sweep.rs  heating_outputs.rs  regression_2024.rs  regression_2zone.rs  regression_3zone.rs  regression_5zone.rs  regression_8zone.rs  regression_capture_wedge_2024.rs  regression_delivered_2024.rs  regression_imports_bracket_2024.rs  regression_inertia_validation_2024.rs  regression_stage2_2024.rs  stability.rs  stability_validate_inertia_smoke.rs  stage5.rs  wind_capacity_zonal.rs
grid-cli/tests/fixtures/: fes-pathway-hand.toml
grid-cli/tests/fixtures/inertia/: neso_inertia_2023_2024.csv  neso_inertia_2024_2025.csv
grid-core/: Cargo.toml
grid-core/src/: analysis.rs  costs.rs  costs_reference.rs  error.rs  heating.rs  inertia.rs  lib.rs  pathways_published.rs  prices_reference.rs  pricing.rs  scenario.rs  time.rs  trace.rs  units.rs
grid-core/tests/: costs_reference.rs  heating.rs  inertia_defaults.rs  pathways_published.rs  pricing.rs  scenario.rs  trace_loading.rs
grid-core/tests/fixtures/: v1-gb-2024-reference-inputs.toml  v1-gb-2024-reference.toml  v2-gb-2024-reference.toml  v3-gb-2024-reference.toml  v4-gb-2024-reference.toml  v5-gb-2024-reference.toml  v6-gb-2024-reference.toml  v7-gb-2024-reference.toml
grid-stability/: Cargo.toml
grid-stability/benches/: stage6.rs
grid-stability/src/: inertia.rs  lib.rs  pathway.rs  reference.rs  spec.rs  swing.rs
grid-stability/tests/: acceptance_aug2019.rs  analytic.rs  inertia_sum.rs  pathway.rs  reference_inertia.rs  spec_and_swing.rs
scenarios/: ccc-cb7-bp-2035.toml  ccc-cb7-bp-2050.toml  fes2025-ee-2035.toml  fes2025-ee-2050.toml  gb-2024-2zone.toml  gb-2024-3zone.toml  gb-2024-5zone.toml  gb-2024-8zone.toml  gb-2024-benign-battery.toml  gb-2024-reference.toml  royal-society-37y-heated.toml  royal-society-37y-lean.toml  royal-society-37y-mid.toml  royal-society-37y.toml
scenarios/events/: gb-2019-08-09.toml
scenarios/sweeps/: module4-storage-overbuild.toml
scripts/era5-cf/: README.md  derive_cf.py  derive_cf_eu.py  derive_cf_gb2zone.py  derive_cf_gb3zone.py  derive_t2m_gb.py  fetch_era5.py  requirements.txt  tile_demand.py  validate_cf.py  validate_cf_eu.py  validate_multiyear.py  validate_t2m_gb.py
scripts/fes-pathway/: README.md  build.py  fetch.py  validate.py
scripts/fetch-2024/: README.md  analyze.py  build.py  fetch.py  validate.py
scripts/fetch-b6/: README.md  build.py  fetch.py  requirements.txt
scripts/fetch-cbs/: README.md  build.py  (+2 more)
viewer/: README.md  index.html
(+15 files in other folders)
