[package]
name = "grid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "grid-sim shared domain model: units, scenario schema, trace loading"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
